--- a/app/src/main/res/drawable/pagi_number_rectangle.xml
+++ b/app/src/main/res/drawable/pagi_number_rectangle.xml
@@ -3,5 +3,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="5dp"/>
-    <solid android:color="@color/pagi_bg_color"/>
+    <solid android:color="@color/details_bg_color"/>
 </shape>
