--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="details_category_tags">#FF3466</color>
     <color name="description_text">#FFFFFF</color>
     <color name="cast_titles">#D8D8D8</color>
+    <color name="rectangle_card_stroke">#636375</color>
+    <color name="movie_time">#565665</color>
 </resources>
