--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -11,10 +11,21 @@
         android:background="@color/details_bg_color">
 
         <ImageView
+            android:id="@+id/movie_details_bg"
             android:layout_width="match_parent"
             android:layout_height="298dp"
-            android:background="@drawable/details_top_image_bg"
+            android:background="@drawable/movie_details_bg_avengers"
+            android:scaleType="fitXY"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/ic_mask"
+            app:layout_constraintTop_toTopOf="@+id/movie_details_bg"
+            app:layout_constraintBottom_toBottomOf="@+id/movie_details_bg"
+            app:layout_constraintStart_toStartOf="@+id/movie_details_bg"
+            app:layout_constraintEnd_toEndOf="@+id/movie_details_bg" />
 
         <ImageView
             android:id="@+id/movie_details_back_button"
@@ -32,7 +43,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="56dp"
             android:text="Back"
-            android:textColor="@color/top_section_text_color"
+            android:textColor="@color/description_text"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -48,6 +59,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/movie_details_age_text"
             android:layout_width="24dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -67,7 +79,7 @@
             app:layout_constraintGuide_end="433dp" />
 
         <TextView
-            android:id="@+id/details_title"
+            android:id="@+id/movie_details_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -81,7 +93,7 @@
             app:layout_constraintTop_toBottomOf="@+id/age_restriction_bg" />
 
         <TextView
-            android:id="@+id/details_category_tags"
+            android:id="@+id/movie_details_tags"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -92,7 +104,7 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/details_title" />
+            app:layout_constraintTop_toBottomOf="@+id/movie_details_title" />
 
         <ImageView
             android:id="@+id/details_first_star"
@@ -102,7 +114,7 @@
             android:layout_marginTop="8dp"
             android:src="@drawable/star_icon_on"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/details_category_tags" />
+            app:layout_constraintTop_toBottomOf="@+id/movie_details_tags" />
 
         <ImageView
             android:id="@+id/details_second_star"
@@ -112,7 +124,7 @@
             android:layout_marginTop="8dp"
             android:src="@drawable/star_icon_on"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/details_category_tags" />
+            app:layout_constraintTop_toBottomOf="@+id/movie_details_tags" />
 
         <ImageView
             android:id="@+id/details_third_star"
@@ -122,7 +134,7 @@
             android:layout_marginTop="8dp"
             android:src="@drawable/star_icon_on"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/details_category_tags" />
+            app:layout_constraintTop_toBottomOf="@+id/movie_details_tags" />
 
         <ImageView
             android:id="@+id/details_fourth_star"
@@ -132,7 +144,7 @@
             android:layout_marginTop="8dp"
             android:src="@drawable/star_icon_on"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/details_category_tags" />
+            app:layout_constraintTop_toBottomOf="@+id/movie_details_tags" />
 
         <ImageView
             android:id="@+id/details_fifth_star"
@@ -142,10 +154,10 @@
             android:layout_marginTop="8dp"
             android:src="@drawable/star_icon_off"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/details_category_tags" />
+            app:layout_constraintTop_toBottomOf="@+id/movie_details_tags" />
 
         <TextView
-            android:id="@+id/review_name"
+            android:id="@+id/details_review_text"
             android:layout_width="112dp"
             android:layout_height="20dp"
             android:layout_marginStart="8.89dp"
@@ -155,7 +167,7 @@
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/details_fifth_star"
-            app:layout_constraintTop_toBottomOf="@+id/details_category_tags" />
+            app:layout_constraintTop_toBottomOf="@+id/movie_details_tags" />
 
         <TextView
             android:id="@+id/storyline_title"
@@ -169,17 +181,17 @@
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/review_name" />
+            app:layout_constraintTop_toBottomOf="@id/details_review_text" />
 
         <TextView
-            android:id="@+id/storyline_text"
+            android:id="@+id/movie_details_storyline_text"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
             android:gravity="center_vertical"
-            android:text="@string/storyline_body_text"
+            tools:text="@string/storyline_body_avengers"
             android:textColor="@color/description_text"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -198,121 +210,21 @@
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/storyline_text" />
+            app:layout_constraintTop_toBottomOf="@id/movie_details_storyline_text" />
 
-        <ImageView
-            android:id="@+id/cast_image1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="16dp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_details_cast"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
-            android:background="@drawable/cast_bg_round_shape"
-            android:src="@drawable/robert_djr"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toStartOf="@+id/cast_image2"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="spread_inside"
-            app:layout_constraintHorizontal_weight="1"
+            android:layout_marginBottom="30dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cast_title" />
+            app:layout_constraintTop_toBottomOf="@id/cast_title"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="horizontal"
+            tools:listitem=""/>
 
-        <ImageView
-            android:id="@+id/cast_image2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/cast_bg_round_shape"
-            android:src="@drawable/chris_evans"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toStartOf="@+id/cast_image3"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintStart_toEndOf="@+id/cast_image1"
-            app:layout_constraintTop_toBottomOf="@id/cast_title" />
-
-        <ImageView
-            android:id="@+id/cast_image3"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/cast_bg_round_shape"
-            android:src="@drawable/robert_d"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toStartOf="@+id/cast_image4"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintStart_toEndOf="@+id/cast_image2"
-            app:layout_constraintTop_toBottomOf="@id/cast_title" />
-
-        <ImageView
-            android:id="@+id/cast_image4"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/cast_bg_round_shape"
-            android:src="@drawable/chris_h"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintStart_toEndOf="@+id/cast_image3"
-            app:layout_constraintTop_toBottomOf="@id/cast_title" />
-
-        <TextView
-            android:id="@+id/cast_image_title1"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="@string/robert_downey_jr"
-            android:textColor="@color/cast_titles"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:gravity="left"
-            android:layout_marginTop="6dp"
-            app:layout_constraintTop_toBottomOf="@id/cast_image1"
-            app:layout_constraintStart_toStartOf="@id/cast_image1"/>
-
-        <TextView
-            android:id="@+id/cast_image_title2"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="@string/chris_evans"
-            android:textColor="@color/cast_titles"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:gravity="left"
-            android:layout_marginTop="6dp"
-            app:layout_constraintTop_toBottomOf="@id/cast_image2"
-            app:layout_constraintStart_toStartOf="@id/cast_image2"/>
-
-        <TextView
-            android:id="@+id/cast_image_title3"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="@string/mark_ruffalo"
-            android:textColor="@color/cast_titles"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:gravity="left"
-            android:layout_marginTop="6dp"
-            app:layout_constraintTop_toBottomOf="@id/cast_image3"
-            app:layout_constraintStart_toStartOf="@id/cast_image3"/>
-
-        <TextView
-            android:id="@+id/cast_image_title4"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="@string/chris_hemsworth"
-            android:textColor="@color/cast_titles"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:gravity="left"
-            android:layout_marginTop="6dp"
-            app:layout_constraintTop_toBottomOf="@id/cast_image4"
-            app:layout_constraintStart_toStartOf="@id/cast_image4"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
