--- a/app/src/main/res/layout/view_holder_movie.xml
+++ b/app/src/main/res/layout/view_holder_movie.xml
@@ -3,12 +3,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/movie_item_parent"
     android:layout_width="170dp"
     android:layout_height="wrap_content"
     android:background="@drawable/movie_list_item_bg">
 
     <ImageView
+        android:id="@+id/movie_item_bg_image"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:adjustViewBounds="true"
@@ -20,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
-        android:id="@+id/age_restriction_bg"
+        android:id="@+id/movie_item_age_restriction_bg"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="8dp"
@@ -30,6 +32,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/movie_item_age_restriction_number"
         android:layout_width="24dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -39,16 +42,16 @@
         android:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@id/age_restriction_bg"
-        app:layout_constraintTop_toTopOf="@+id/age_restriction_bg" />
+        app:layout_constraintEnd_toEndOf="@id/movie_item_age_restriction_bg"
+        app:layout_constraintTop_toTopOf="@+id/movie_item_age_restriction_bg" />
 
     <ImageView
-        android:id="@+id/movie_favorite_indicator"
+        android:id="@+id/movie_item_favorite_indicator"
         android:layout_width="16dp"
         android:layout_height="14dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="13dp"
-        android:src="@drawable/movie_favorite_indicator"
+        android:src="@drawable/movie_favorite_indicator_off"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -66,7 +69,7 @@
         android:layout_marginTop="214dp"/>
 
     <ImageView
-        android:id="@+id/details_first_star"
+        android:id="@+id/movie_item_first_star"
         android:layout_width="8dp"
         android:layout_height="8dp"
         android:layout_marginStart="8dp"
@@ -76,43 +79,43 @@
         app:layout_constraintTop_toBottomOf="@+id/movie_item_category_tags" />
 
     <ImageView
-        android:id="@+id/details_second_star"
+        android:id="@+id/movie_item_second_star"
         android:layout_width="8dp"
         android:layout_height="8dp"
         android:layout_marginStart="2dp"
         android:layout_marginTop="4dp"
         android:src="@drawable/star_icon_on"
-        app:layout_constraintStart_toEndOf="@id/details_first_star"
+        app:layout_constraintStart_toEndOf="@id/movie_item_first_star"
         app:layout_constraintTop_toBottomOf="@+id/movie_item_category_tags" />
 
     <ImageView
-        android:id="@+id/details_third_star"
+        android:id="@+id/movie_item_third_star"
         android:layout_width="8dp"
         android:layout_height="8dp"
         android:layout_marginStart="2dp"
         android:layout_marginTop="4dp"
         android:src="@drawable/star_icon_on"
-        app:layout_constraintStart_toEndOf="@id/details_second_star"
+        app:layout_constraintStart_toEndOf="@id/movie_item_second_star"
         app:layout_constraintTop_toBottomOf="@+id/movie_item_category_tags" />
 
     <ImageView
-        android:id="@+id/details_fourth_star"
+        android:id="@+id/movie_item_fourth_star"
         android:layout_width="8dp"
         android:layout_height="8dp"
         android:layout_marginStart="2dp"
         android:layout_marginTop="4dp"
         android:src="@drawable/star_icon_on"
-        app:layout_constraintStart_toEndOf="@id/details_third_star"
+        app:layout_constraintStart_toEndOf="@id/movie_item_third_star"
         app:layout_constraintTop_toBottomOf="@+id/movie_item_category_tags" />
 
     <ImageView
-        android:id="@+id/details_fifth_star"
+        android:id="@+id/movie_item_fifth_star"
         android:layout_width="8dp"
         android:layout_height="8dp"
         android:layout_marginStart="2dp"
         android:layout_marginTop="4dp"
         android:src="@drawable/star_icon_off"
-        app:layout_constraintStart_toEndOf="@id/details_fourth_star"
+        app:layout_constraintStart_toEndOf="@id/movie_item_fourth_star"
         app:layout_constraintTop_toBottomOf="@+id/movie_item_category_tags" />
 
     <TextView
@@ -122,15 +125,15 @@
         android:layout_marginStart="6dp"
         android:layout_marginTop="2dp"
         android:gravity="center"
-        android:text="125 REVIEWS"
+        tools:text="125 REVIEWS"
         android:textColor="@color/top_section_text_color"
         android:textSize="8sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/details_fifth_star"
+        app:layout_constraintStart_toEndOf="@+id/movie_item_fifth_star"
         app:layout_constraintTop_toBottomOf="@+id/movie_item_category_tags" />
 
     <TextView
-        android:id="@+id/movie_list_item_title"
+        android:id="@+id/movie_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -144,6 +147,7 @@
         app:layout_constraintTop_toBottomOf="@+id/movie_item_review_text" />
 
     <TextView
+        android:id="@+id/movie_item_duration"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/movie_avengers_item_time"
@@ -151,7 +155,7 @@
         android:textColor="@color/movie_time"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/movie_list_item_title"
+        app:layout_constraintTop_toBottomOf="@id/movie_item_title"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
