--- a/app/src/main/res/layout/view_holder_movie.xml
+++ b/app/src/main/res/layout/view_holder_movie.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/movie_item_parent"
     android:layout_width="170dp"
-    android:layout_height="wrap_content"
+    android:layout_height="296dp"
     android:background="@drawable/movie_list_item_bg">
 
     <ImageView
@@ -20,6 +20,15 @@
         android:src="@drawable/movie_list_avengers_bg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/ic_mask"
+        app:layout_constraintTop_toTopOf="@+id/movie_item_bg_image"
+        app:layout_constraintBottom_toBottomOf="@+id/movie_item_bg_image"
+        app:layout_constraintStart_toStartOf="@+id/movie_item_bg_image"
+        app:layout_constraintEnd_toEndOf="@+id/movie_item_bg_image" />
 
     <ImageView
         android:id="@+id/movie_item_age_restriction_bg"
@@ -38,7 +47,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
         android:gravity="center"
-        android:text="@string/details_page_text"
+        tools:text="13+"
         android:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -59,103 +68,103 @@
         android:id="@+id/movie_item_category_tags"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/movie_list_avengers_tags"
+        tools:text="Action, Adventure, Fiction"
         android:textColor="@color/details_category_tags"
         android:textSize="8sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/movie_item_review_text"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="214dp"/>
+        android:layout_marginBottom="2dp"/>
 
     <ImageView
         android:id="@+id/movie_item_first_star"
         android:layout_width="8dp"
         android:layout_height="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginBottom="18dp"
         android:src="@drawable/star_icon_on"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/movie_item_category_tags" />
+        app:layout_constraintBottom_toTopOf="@id/movie_item_title" />
 
     <ImageView
         android:id="@+id/movie_item_second_star"
         android:layout_width="8dp"
         android:layout_height="8dp"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginBottom="18dp"
         android:src="@drawable/star_icon_on"
         app:layout_constraintStart_toEndOf="@id/movie_item_first_star"
-        app:layout_constraintTop_toBottomOf="@+id/movie_item_category_tags" />
+        app:layout_constraintBottom_toTopOf="@id/movie_item_title" />
 
     <ImageView
         android:id="@+id/movie_item_third_star"
         android:layout_width="8dp"
         android:layout_height="8dp"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginBottom="18dp"
         android:src="@drawable/star_icon_on"
         app:layout_constraintStart_toEndOf="@id/movie_item_second_star"
-        app:layout_constraintTop_toBottomOf="@+id/movie_item_category_tags" />
+        app:layout_constraintBottom_toTopOf="@id/movie_item_title" />
 
     <ImageView
         android:id="@+id/movie_item_fourth_star"
         android:layout_width="8dp"
         android:layout_height="8dp"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginBottom="18dp"
         android:src="@drawable/star_icon_on"
         app:layout_constraintStart_toEndOf="@id/movie_item_third_star"
-        app:layout_constraintTop_toBottomOf="@+id/movie_item_category_tags" />
+        app:layout_constraintBottom_toTopOf="@id/movie_item_title" />
 
     <ImageView
         android:id="@+id/movie_item_fifth_star"
         android:layout_width="8dp"
         android:layout_height="8dp"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginBottom="18dp"
         android:src="@drawable/star_icon_off"
         app:layout_constraintStart_toEndOf="@id/movie_item_fourth_star"
-        app:layout_constraintTop_toBottomOf="@+id/movie_item_category_tags" />
+        app:layout_constraintBottom_toTopOf="@+id/movie_item_title" />
 
     <TextView
         android:id="@+id/movie_item_review_text"
-        android:layout_width="53dp"
+        android:layout_width="wrap_content"
         android:layout_height="12dp"
         android:layout_marginStart="6dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginBottom="16dp"
         android:gravity="center"
         tools:text="125 REVIEWS"
         android:textColor="@color/top_section_text_color"
         android:textSize="8sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/movie_item_fifth_star"
-        app:layout_constraintTop_toBottomOf="@+id/movie_item_category_tags" />
+        app:layout_constraintBottom_toTopOf="@+id/movie_item_title" />
 
     <TextView
         android:id="@+id/movie_item_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="16dp"
         android:padding="0dp"
-        android:text="@string/movie_avengers_item_title"
+        tools:text="Avengers: End Game"
         android:textColor="@color/details_title_color"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/movie_item_review_text" />
+        app:layout_constraintBottom_toTopOf="@+id/movie_item_duration" />
 
     <TextView
         android:id="@+id/movie_item_duration"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/movie_avengers_item_time"
+        tools:text="137 min"
         android:textSize="8sp"
         android:textColor="@color/movie_time"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/movie_item_title"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
