--- a/app/src/main/res/layout/view_holder_actor.xml
+++ b/app/src/main/res/layout/view_holder_actor.xml
@@ -14,7 +14,7 @@
         android:layout_height="80dp"
         android:background="@drawable/cast_bg_round_shape"
         android:scaleType="fitXY"
-        tools:src="@drawable/avengers_robert_djr"
+        tools:src="@drawable/no_avatar"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
