--- a/app/src/main/res/layout/fragment_movies_list.xml
+++ b/app/src/main/res/layout/fragment_movies_list.xml
@@ -40,6 +40,7 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_main_movie_list"
+                    android:transitionGroup="true"
                     android:layout_width="match_parent"
                     android:layout_height="620dp"
                     app:layout_constraintTop_toBottomOf="@id/movies_list_top_title"
