--- a/app/src/main/res/layout/view_holder_movie.xml
+++ b/app/src/main/res/layout/view_holder_movie.xml
@@ -7,6 +7,7 @@
     android:id="@+id/movie_item_parent"
     android:layout_width="170dp"
     android:layout_height="296dp"
+    android:transitionGroup="true"
     android:background="@drawable/movie_list_item_bg">
 
     <ImageView
